add count to excursions

--- a/templates/administrator/excursions/admin_excursions.html
+++ b/templates/administrator/excursions/admin_excursions.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <section>
-    <h1 class="text-center mt-5">Excursions Admin</h1>
+    <h1 class="text-center mt-5">Excursions {{excursions.count}} Admin </h1>
 
     <div class="text-center mt-5">
         <a href="{% url 'add_excursion'%}"><button type="button" class="btn user_button_sm my_hover"><i
