delete duplicated of time

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -115,7 +115,6 @@
         <li><i class="fas fa-language"></i> <strong>Tour Language:</strong> English</li>
         <li><i class="fas fa-map-marker-alt"></i> <strong>Tour Location:</strong> Punta Cana</li>
         <li><i class="fas fa-calendar-alt"></i> <strong>Season:</strong> All year long</li>
-        <li><i class="fas fa-hourglass-half"></i> <strong>Duration:</strong> {{excursions.duration_time}} hours</li>
         <li><i class="fas fa-user-check"></i> <strong>Minimum Age Requirement:</strong> 18 years old</li>
         <li><i class="fas fa-running"></i> <strong>Good Physical Condition Required:</strong> No</li>
         <li><i class="fas fa-child"></i> <strong>Suitable For Children:</strong> No</li>
@@ -324,7 +323,7 @@
 
 
 <div class="related-activities">
-  <h2>Related Punta Cana Activities</h2>
+  <h2>Related Punta Cana Activities</h2>git 
   <div class="related-activities-slider">
       {% for excursion in related_activities %}
     <div class="card-container">
