--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -218,6 +218,18 @@
       <div class="ticket-selection">
         <h3><i class="fas fa-ticket-alt"></i> Select your tickets</h3>
 
+
+        {% if  excursions.just_adult %}
+        <div class="ticket">
+          <span>Adult (18+)</span>
+          <span class="price" id="adult-price">${{excursions.Price}}</span>
+          <div class="quantity-control">
+            <span class="span-btn" onclick="updateTicketCount('adult', -1)">-</span>
+            <input name="adult_qty" id="adult-count" value="0" required>
+            <span class="span-btn" onclick="updateTicketCount('adult', 1)">+</span>
+          </div>
+        </div>
+        {% else %}
         <div class="ticket">
           <span>Adult (13+)</span>
           <span class="price" id="adult-price">${{excursions.Price}}</span>
@@ -227,7 +239,9 @@
             <span class="span-btn" onclick="updateTicketCount('adult', 1)">+</span>
           </div>
         </div>
+        {% endif%}
 
+      {% if not excursions.just_adult %}
         <div class="ticket">
           <span>Child (3-12)</span>
           <span class="price" id="children-price">${{excursions.price_children}}</span>
@@ -239,7 +253,7 @@
         </div>
 
         <div class="ticket">
-          <span>Child (0-2)</span>
+          <span>Infant (0-2)</span>
           <span class="price">Free</span>
           <div class="quantity-control">
             <span class="span-btn" onclick="updateTicketCount('infant', -1)">-</span>
@@ -247,6 +261,8 @@
             <span class="span-btn" onclick="updateTicketCount('infant', 1)">+</span>
           </div>
         </div>
+        {% endif %}
+
       </div>
 
       <div class="total-price">
