Add pay at pick up

--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -94,6 +94,7 @@
         <span> Taxes ${{taxes_and_fees|floatformat:2}}</span><br>
         <span>Total (US) <strong>${{final_total | floatformat:2}}</strong></span><br>
         <span style="color:green">Reserve now with: <strong>${{anticipo| floatformat:2}}</span> <br>
+         <span style="color:red">Pay at pick Up: <strong>${{ pay_at_pickup | floatformat:2 }}</strong></span><br>
       </div>
     </div>
 
