--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -1,6 +1,10 @@
 {% extends 'base2.html' %}
 {% block title %}{{ excursions.title }}{% endblock %}
 {% block description %}{{ excursions.meta_description }}{% endblock %}
+{% block og_title %}{{ excursions.title }}{% endblock %}
+{% block og_description %}{{excursions.meta_description}}{% endblock %}
+{% block og_image %}{{excursions.main_image.url}}{% endblock %}
+
 
 {% load static %}
 {% block content %}
