--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -100,9 +100,9 @@
           a full refund</li>
         <li><i class="fas fa-calendar-check"></i> <strong>Reserve now :</strong> Book your spot and pay just for
           reservation and rest at pick up</li>
-          {% if excursions.duration_time %}
+        {% if excursions.duration_time %}
         <li><i class="fas fa-clock"></i> <strong>Duration:</strong> {{excursions.duration_time}} hours</li>
-          {% endif %}
+        {% endif %}
         <li><i class="fas fa-ticket-alt"></i> <strong>Skip the ticket line</strong></li>
         <li><i class="fas fa-globe"></i> <strong>Live tour guide:</strong> Available in Spanish, English, French,
           Portuguese</li>
@@ -221,7 +221,7 @@
         <h3><i class="fas fa-ticket-alt"></i> Select your tickets</h3>
 
 
-        {% if  excursions.just_adult %}
+        {% if excursions.just_adult %}
         <div class="ticket">
           <span>Adult (18+)</span>
           <span class="price" id="adult-price">${{excursions.price}}</span>
@@ -237,13 +237,17 @@
           <span class="price" id="adult-price">${{excursions.price}}</span>
           <div class="quantity-control">
             <span class="span-btn" onclick="updateTicketCount('adult', -1)">-</span>
-            <input name="adult_qty" id="adult-count" value="0" required>
-            <span class="span-btn" onclick="updateTicketCount('adult', 1)">+</span>
+            <input name="adult_qty" id="adult-count" value="0"  
+            min="{{ excursions.group|yesno:'4,1'}}" 
+            max="99" 
+            data-item_id="{{excursions.id}}" 
+            required> 
+            <span class="span-btn" onclick="updateTicketCount('adult', 1)">+ {{excursions.group}}</span>
           </div>
         </div>
         {% endif%}
 
-      {% if not excursions.just_adult %}
+        {% if not excursions.just_adult %}
         <div class="ticket">
           <span>Child (3-12)</span>
           <span class="price" id="children-price">${{excursions.price_children}}</span>
@@ -313,7 +317,8 @@
 
     <p>Based on {{excursions.reviews.all.count}} reviews from verified customers</p>
     <div class="rating-filter">
-      <label><input type="radio" name="rating" value="all" checked> All ratings ({{ excursions.reviews.all.count }})</label>
+      <label><input type="radio" name="rating" value="all" checked> All ratings ({{ excursions.reviews.all.count
+        }})</label>
       <label><input type="radio" name="rating" value="5"> Excellent ({{ rating_counts.5 }})</label>
       <label><input type="radio" name="rating" value="4"> Great ({{ rating_counts.4 }})</label>
       <label><input type="radio" name="rating" value="3"> Average ({{ rating_counts.3 }})</label>
@@ -343,45 +348,44 @@
 <div class="related-activities">
   <h2>Related Punta Cana Activities</h2>
   <div class="related-activities-slider">
-      {% for excursion in related_activities %}
+    {% for excursion in related_activities %}
     <div class="card-container">
       <div class="card">
-          <img src="{{excursion.main_image.url}}" loading="lazy" alt="Punta Cana beach tour - {{excursion.title}}">
-          <div class="content">
-              <div class="tag">ACTIVITIES</div>
-              <h3>{{excursion.title|slice:":60"|title}}...</h3>
-              {% if excursion.duration_time %}
-              <span class="img_icon1 badge rounded-pill bg-warning text-dark">
-                  <i class="fa-solid fa-hourglass-start"></i> {{excursion.duration_time}} hours</span>
-              {% endif %}
-              {% if excursion.tour_guide %}
-              <span class="img_icon2 badge rounded-pill bg-warning text-dark">
-                  <i class="fa-solid fa-user"></i> Tour Guide</span>
-              {% endif %}
-              {% if excursion.transportation %}
-              <span class="img_icon3  badge rounded-pill bg-warning text-dark">
-                  <i class="fa-solid fa-van-shuttle"></i> Transportation</span>
-              {% endif %}
-              <div class="rating-price" itemscope itemtype="https://schema.org/Review">
-                  <meta itemprop="name" content="{{excursion.title}}" />
-                  <span itemprop="reviewRating" itemscope itemtype="https://schema.org/Rating">
-                      <meta itemprop="ratingValue" content="{{excursion.reviews.count}}" />
-                      ⭐ {{ excursion.get_average_rating }}/5 ({{excursion.reviews.count}})
-                  </span>
-                  <span class="price" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
-                      <span itemprop="priceCurrency" content="USD">$</span><span
-                          itemprop="price">{{excursion.price}}</span>
-                  </span>
-              </div>
-              <div class="action">
-                  <a href="{% url 'excursion_detail' excursion.slugy %}" class="book-link">
-                      <button class="book-btn">Book Now</button>
-                  </a>
-              </div>
+        <img src="{{excursion.main_image.url}}" loading="lazy" alt="Punta Cana beach tour - {{excursion.title}}">
+        <div class="content">
+          <div class="tag">ACTIVITIES</div>
+          <h3>{{excursion.title|slice:":60"|title}}...</h3>
+          {% if excursion.duration_time %}
+          <span class="img_icon1 badge rounded-pill bg-warning text-dark">
+            <i class="fa-solid fa-hourglass-start"></i> {{excursion.duration_time}} hours</span>
+          {% endif %}
+          {% if excursion.tour_guide %}
+          <span class="img_icon2 badge rounded-pill bg-warning text-dark">
+            <i class="fa-solid fa-user"></i> Tour Guide</span>
+          {% endif %}
+          {% if excursion.transportation %}
+          <span class="img_icon3  badge rounded-pill bg-warning text-dark">
+            <i class="fa-solid fa-van-shuttle"></i> Transportation</span>
+          {% endif %}
+          <div class="rating-price" itemscope itemtype="https://schema.org/Review">
+            <meta itemprop="name" content="{{excursion.title}}" />
+            <span itemprop="reviewRating" itemscope itemtype="https://schema.org/Rating">
+              <meta itemprop="ratingValue" content="{{excursion.reviews.count}}" />
+              ⭐ {{ excursion.get_average_rating }}/5 ({{excursion.reviews.count}})
+            </span>
+            <span class="price" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
+              <span itemprop="priceCurrency" content="USD">$</span><span itemprop="price">{{excursion.price}}</span>
+            </span>
           </div>
+          <div class="action">
+            <a href="{% url 'excursion_detail' excursion.slugy %}" class="book-link">
+              <button class="book-btn">Book Now</button>
+            </a>
+          </div>
+        </div>
 
-          <!-- Schema Markup for Excursion -->
-          <script type="application/ld+json">
+        <!-- Schema Markup for Excursion -->
+        <script type="application/ld+json">
               {
                   "@context": "https://schema.org",
                   "@type": "TouristTrip",
@@ -411,7 +415,7 @@
           </script>
       </div>
     </div>
-      {% endfor %}
+    {% endfor %}
   </div>
 </div>
 {% endif%}
