fix btn in detail form

--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -242,7 +242,7 @@
             max="99" 
             data-item_id="{{excursions.id}}" 
             required> 
-            <span class="span-btn" onclick="updateTicketCount('adult', 1)">+ {{excursions.group}}</span>
+            <span class="span-btn" onclick="updateTicketCount('adult', 1)">+</span>
           </div>
         </div>
         {% endif%}
