--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -127,7 +127,7 @@
   </div>
 
   <div class="booking-form">
-    <form class="form" action="{% url 'add_to_cart' excursions.id %}" method="POST">
+    <form class="form" id="form-add-to-cart" action="{% url 'add_to_cart' excursions.id %}" method="POST">
       {% csrf_token %}
       <h2><i class="fas fa-calendar-alt"></i> Availability and Prices</h2>
       <div class="availability">
@@ -295,6 +295,8 @@
   </div>
 </section>
 
+
+
 <!-- reviews sections -->
 <div class="reviews-section" id="reviews">
   <h2 class="text-center">What people say about this experience</h2>
@@ -317,8 +319,7 @@
 
     <p>Based on {{excursions.reviews.all.count}} reviews from verified customers</p>
     <div class="rating-filter">
-      <label><input type="radio" name="rating" value="all" checked> All ratings ({{ excursions.reviews.all.count
-        }})</label>
+      <label><input type="radio" name="rating" value="all" checked> All ratings ({{excursions.reviews.all.count}})</label>
       <label><input type="radio" name="rating" value="5"> Excellent ({{ rating_counts.5 }})</label>
       <label><input type="radio" name="rating" value="4"> Great ({{ rating_counts.4 }})</label>
       <label><input type="radio" name="rating" value="3"> Average ({{ rating_counts.3 }})</label>
