:Add blog css and detail

--- a/templates/base2.html
+++ b/templates/base2.html
@@ -75,6 +75,7 @@
     <link href="{% static 'css/calender.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/reviews-section.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/longin-signup.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/blog-post.css' %}" rel="stylesheet" type="text/css">
 
     <title>{% block title %}Best Punta Cana Excursions & Tours for 2024 | Punta Cana Discovery{% endblock %}</title>
 </head>
