--- a/templates/blog/blogpost_detail.html
+++ b/templates/blog/blogpost_detail.html
@@ -2,7 +2,6 @@
 
 {% block content %}
   <article class="blog-post">
-    <h1><i class="fas fa-umbrella-beach"></i> {{post.title}}</h1>
     <p>By {{ post.author }} on {{ post.created_at|date:"F d, Y" }}</p>
     <p><span class="rating">⭐ {{ post.rating }}/5 Reviews</span>
 
@@ -15,7 +14,7 @@
         
         {% if post.video_id %}
         <div style="width:100%">
-          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/{{excursions.video_id}}"
+          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/{{post.video_id}}"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
